# CloudReverb

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  cmake.yml
audio_engine/: AllpassDiffuser.h  CMakeLists.txt  Default.h  DelayLine.h  Exports.cpp  FastSin.cpp  FastSin.h  ModulatedAllpass.h  ModulatedDelay.h  MultitapDiffuser.h  Parameter.h  ReverbChannel.h  ReverbController.h  Utils.h
audio_engine/AudioLib/: Biquad.cpp  Biquad.h  Hp1.h  Lp1.h  ValueTables.cpp  ValueTables.h
plugin/: Block.cpp  Block.h  CustomToggleButton.cpp  CustomToggleButton.h  DelayBlock.cpp  DelayBlock.h  DiffusionBlock.cpp  DiffusionBlock.h  EqBlock.cpp  EqBlock.h  Header.cpp  Header.h  InputBlock.cpp  InputBlock.h  LateDiffusionBlock.cpp  LateDiffusionBlock.h  Mixer.cpp  Mixer.h  MyLookAndFeel.cpp  MyLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ReverbSlider.cpp  ReverbSlider.h  RouteBlock.cpp  RouteBlock.h  TapBlock.cpp  TapBlock.h
plugin/layout/: Layout.cpp  Layout.h  ThreePartLayout.cpp  ThreePartLayout.h
plugin/presets/: presets.h
